[package]
name = "rstodo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-ssh2-tokio = "0.8.12"
async-std = "1.13.0"
directories-next = "2.0.0"
iced = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

