[package]
name = "tbgui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple GUI front-end for TB-Profiler using SSH written in Rust"
repository = "https://github.com/michaelmeuli/tbgui"

[dependencies]
async-ssh2-tokio = "0.8.12"
async-std = "1.13.0"
confy = "0.6.1"
directories-next = "2.0.0"
iced = { version = "0.13.1", features = ["tokio", "svg"] }
rfd = "0.15.2"
russh-sftp = "2.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

